# MagicSalmon

./: CMakeLists.txt  todo.txt
include/MagicSalmon/: MagicSalmon.hpp
src/: board.cpp  board.hpp  main.cpp  piece.cpp  piece.hpp
